--- a/src/assets/scss/pages/_account.scss
+++ b/src/assets/scss/pages/_account.scss
@@ -101,3 +101,15 @@
         }
     }
 }
+@media (max-width: 991px) and (min-width: 300px) {
+ .items {
+    flex-direction: column;
+    .sign {
+        width: 100% !important;
+        margin-left: 0px !important;
+    }
+    .create {
+        width: 100% !important;
+    }
+ }
+}
