--- a/src/assets/scss/Components/_header.scss
+++ b/src/assets/scss/Components/_header.scss
@@ -17,12 +17,13 @@ header {
     }
 
     .top {
+        width: 100%;
         display: flex;
         justify-content: flex-end;
         background-color: #fff;
         gap: 20px;
         font-size: 1rem;
-        padding: 10px 50px 10px 0;
+        padding: 10px 0px;
         position: relative;
         z-index: 2;
 
@@ -31,60 +32,60 @@ header {
         }
 
         .burgerMenu {
-            position: absolute !important;
-            left: 40px !important;
+  
             font-size: 25px;
             color: #00369D;
             transition: 0.3s ease-in-out;
             width: 100vw;
             padding-left: 40px;
             display: none;
-          
+
             .leftDiv {
-              position: absolute;
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-              width: 100vw;
-              left: -110%;
-              top: 50px;
-              padding: 40px;
-              height: 100vh;
-              background-color: #00369D;
-              transition: left 0.3s ease-in-out;
-          
-              &.active {
-                left: -40px;
-              }
-          
-              ul {
-                li {
-                  margin-bottom: 20px;
-                  .whiteLink {
-                    font-size: 20px;
-                  }
+                position: absolute;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                width: 100vw !important;
+                left: -150%;
+                top: 50px;
+                padding: 40px;
+                height: 100vh;
+                background-color: #00369D;
+                transition: left 0.3s ease-in-out;
+
+                &.active {
+                    left: -40px;
                 }
-              }
+
+                ul {
+                    li {
+                        margin-bottom: 20px;
+
+                        .whiteLink {
+                            font-size: 20px;
+                        }
+                    }
+                }
             }
-          
+
             button {
-              cursor: pointer;
-              border: none;
-              color: #00369D;
-              background-color: transparent;
-              font-size: 25px;
-              display: inline-block;
-              transition: 0.3s ease-in-out;
-          
-              &:hover {
-                transform: rotate(45deg);
-              }
+                cursor: pointer;
+                border: none;
+                color: #00369D;
+                background-color: transparent;
+                font-size: 25px;
+                display: inline-block;
+                transition: 0.3s ease-in-out;
+
+                &:hover {
+                    transform: rotate(45deg);
+                }
             }
-          
+
             &.clicked .leftDiv {
-              display: inline-block;
+                display: inline-block;
             }
-          }
+        }
 
         .cartDrop {
             width: 25rem;
@@ -201,13 +202,14 @@ header {
             position: relative;
             top: -50px;
             padding: 0 10px;
-
+            .logo {
             img {
                 position: relative;
                 width: 150px;
                 height: 110px;
                 top: 2.325rem;
-                z-index: 4;
+                z-index: 1;
+            }
             }
 
             ul {
@@ -240,7 +242,17 @@ header {
     }
 }
 
-@media (max-width: 991px) and (min-width: 601px) {
+@media (max-width: 991px) and (min-width: 300px) {
+    header {
+        .top {
+            width: 100% !important;
+        }
+
+        .ice {
+            width: 100% !important;
+        }
+    }
+
     .burgerMenu {
         display: inline-block !important;
     }
@@ -258,6 +270,80 @@ header {
             width: 100%;
             display: flex;
             justify-content: center;
+        }
+    }
+}
+
+@media (max-width: 601px) and (min-width: 300px) {
+    .burgerMenu {
+        padding: 0px !important;
+        .leftDiv {
+            top: 47px !important;
+            height: 740px !important;
+            justify-content: flex-start !important;
+            ul {
+                width: 200px;
+
+                li {
+                    margin-bottom: 0px !important;
+                    .whiteLink {
+                        font-size: 0.4em !important;
+                    }
+                }
+
+                .contactLink {
+                    font-size: 0.3rem !important;
+                }
+            }
+        }
+
+        button {
+            position: relative;
+            
+        }
+    }
+    .account {
+        display: none;
+        .blueLink {
+            font-size: 9px;
+        }
+    }
+    
+    .cart {
+        button {
+            font-size: 9px;
+        }
+    }
+    .cartDrop {
+        width: 250px !important;
+        li {
+            display: flex !important;
+            flex-direction: column !important;
+        }
+    }
+}
+
+
+
+
+@media (max-width: 385px) {
+    .top {
+        display: flex;
+        justify-content: space-between !important;
+        .burgerMenu {
+            position:  relative !important;
+        }
+    }
+    .ice {
+        padding: 0px !important;
+        .left {
+            width: 100% !important;
+            img {
+                width: 100%;
+            }
+        }
+        .right {
+            display: none;
         }
     }
 }
