--- a/src/assets/scss/pages/_cardInfo.scss
+++ b/src/assets/scss/pages/_cardInfo.scss
@@ -136,3 +136,20 @@
 
     }
 }
+@media (max-width: 991px) and (min-width: 300px) {
+    .productImg {
+        width: 100% !important;
+        display: flex;
+        justify-content: center;
+        img {
+            object-fit: contain !important;
+        }
+    }
+    .productInfo {
+        margin-top: 30px;
+        width: 100% !important;
+        .item {
+            width: 100%;
+        }
+    }
+}
