--- a/src/assets/scss/pages/_events.scss
+++ b/src/assets/scss/pages/_events.scss
@@ -49,6 +49,9 @@
                     cursor: pointer;
                     transition: 0.3s ease-in-out;
                 }
+                .border {
+                    object-fit: contain;
+                }
     
                 &:hover {
                     transform: rotate(0deg);
@@ -83,4 +86,23 @@
         }
     }
 
+}
+@media (max-width: 601px) and (min-width: 300px) {
+    .card {
+        width: 100% !important;
+    }
+}
+@media (max-width: 991px) and (min-width: 601px) {
+    .card {
+        width: 45% !important;
+    }
+}
+@media (max-width: 991px) and (min-width: 300px) {
+    .top {
+        width: 100% !important;
+        p {
+            width: 100% !important;
+            text-align: center;
+        }
+    }
 }
