--- a/src/assets/scss/pages/_location.scss
+++ b/src/assets/scss/pages/_location.scss
@@ -6,19 +6,21 @@
         text-align: center;
         display: flex;
         flex-direction: column;
-        align-items: center;
+
 
         h1 {
             font-size: 50px;
             color: #00369D;
             margin-bottom: 20px;
+            align-items: center;
         }
 
         p {
             font-family: sans-serif;
             font-size: 15px;
-            width: 850px;
+            width: 100%;
             line-height: 25px;
+            align-items: center;
         }
     }
 
