--- a/src/assets/scss/Components/_header.scss
+++ b/src/assets/scss/Components/_header.scss
@@ -323,7 +323,13 @@ header {
     }
 }
 
-
+@media (max-width: 835px) {
+    .ice {
+        .right {
+            display: none !important;
+        }
+    }
+}
 
 
 @media (max-width: 385px) {
