--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -23,7 +23,14 @@
       color: #00369D;
     }
   }
-  
+  .grey {
+    font-family: sans-serif;
+    color: rgb(181, 181, 181);
+    &:hover {
+      color: #fff;
+    }
+  }
+
   .blue {
     color: #00369D;
   
