--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,240 +1,243 @@
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  font-family: "Pacifico";
+  text-decoration: none;
+}
+
+section {
+  padding: 69px 0;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+input {
+  font-family: sans-serif;
+}
+.white {
+  color: #fff;
+
+  &:hover {
+    color: #00369D;
+  }
+}
+
+.grey {
+  font-family: sans-serif;
+  color: rgb(181, 181, 181);
+
+  &:hover {
+    color: #fff;
+  }
+}
+
+.blue {
+  color: #00369D;
+
+  &:hover {
+    color: #fff;
+  }
+}
+
+.passBlue {
+  color: #00369D;
+  cursor: pointer;
+
+  &:hover {
+    color: #4496f6;
+  }
+}
+
+.whiteLink {
+  color: #fff;
+  font-size: 14px;
+  transition: 0.3s ease-in-out;
+  border: 1px solid transparent;
+  padding: 5px;
+
+  &:hover {
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, .1);
+  }
+}
+
+.blueLink {
+  color: #00369D;
+  font-size: 14px;
+  transition: 0.3s ease-in-out;
+  padding: 5px;
+  border: 1px solid transparent;
+
+  &:hover {
+    border-radius: 20px;
+    background-color: rgba(100, 100, 100, 0.2);
+    padding: 5px;
+  }
+}
+
+.classBlue {
+  color: #00369D;
+}
+
+.contactLink {
+  transition: 0.3s ease-in-out;
+  font-size: 14px;
+  color: #fff;
+  border: 1px dashed #fff;
+  border-radius: 20px;
+  padding: 6px;
+
+  &:hover {
+    color: #00369D;
+    padding: 6px;
+    border: 1px solid #fff;
+    background-color: #fff;
+  }
+}
+
+.footerLink {
+  color: #6FB3E3;
+  font-family: sans-serif;
+}
+
+.button {
+  padding: 10px;
+  background-color: #00369D;
+  color: #fff;
+  outline: none;
+  border: 1px solid transparent;
+  border-radius: 32px;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  transition: 0.1s ease-in-out;
+
+  &:hover {
+    background-color: transparent;
+    color: #00369D;
+
+    +.border {
+      left: 0;
+      bottom: 0;
+    }
+  }
+}
+
+.border {
+  display: inline-block;
+  padding: 8px 62px;
+  border: 1px dashed #fff;
+  border-radius: 31px;
+  height: 45px;
+  left: -5px;
+  z-index: 0;
+  position: absolute;
+  bottom: -6px;
+  transition: 0.3s ease-in-out;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #fff;
+  font-size: 20px;
+  background: #00369D;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:hover {
+    background: black;
+    color: #fff;
+    transform: scale(1.1);
+    transition: all 0.3s ease;
+  }
+}
+
+.swiper-button-next {
+  right: 10px;
+}
+
+.swiper-button-prev {
+  left: 10px;
+}
+
+.swiper-pagination {
+  text-align: center;
+}
+
+
+.accountWrapper {
+  position: relative;
+  transition: 0.2s ease-in-out;
+}
+
+.accountHover {
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.accountDropdown {
+  display: none;
+  position: absolute;
+  border: 1px solid #00369D;
+  border-radius: 10px;
+  top: 100%;
+  left: 0;
+  background-color: white;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  transition: 0.2s ease-in-out;
+
+  ul {
+    list-style: none;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    list-style-type: none;
-    font-family: "Pacifico";
-    text-decoration: none;
-  }
-  
-  section {
-    padding: 69px 0;
-  }
-  
-  .container {
-    width: 90%;
-    margin: 0 auto;
-  }
-  
-  .white {
-    color: #fff;
-  
-    &:hover {
-      color: #00369D;
-    }
-  }
-  .grey {
-    font-family: sans-serif;
-    color: rgb(181, 181, 181);
-    &:hover {
-      color: #fff;
-    }
-  }
+    transition: 0.2s ease-in-out;
 
-  .blue {
-    color: #00369D;
-  
-    &:hover {
-      color: #fff;
-    }
-  }
-  
-  .passBlue {
-    color: #00369D;
-    cursor: pointer;
-  
-    &:hover {
-      color: #4496f6;
-    }
-  }
-  
-  .whiteLink {
-    color: #fff;
-    font-size: 14px;
-    transition: 0.3s ease-in-out;
-    border: 1px solid transparent;
-    padding: 5px;
-  
-    &:hover {
-      border-radius: 20px;
-      background-color: rgba(255, 255, 255, .1);
-    }
-  }
-  
-  .blueLink {
-    color: #00369D;
-    font-size: 14px;
-    transition: 0.3s ease-in-out;
-    padding: 5px;
-    border: 1px solid transparent;
-  
-    &:hover {
-      border-radius: 20px;
-      background-color: rgba(100, 100, 100, 0.2);
-      padding: 5px;
-    }
-  }
-  
-  .classBlue {
-    color: #00369D;
-  }
-  
-  .contactLink {
-    transition: 0.3s ease-in-out;
-    font-size: 14px;
-    color: #fff;
-    border: 1px dashed #fff;
-    border-radius: 20px;
-    padding: 6px;
-  
-    &:hover {
-      color: #00369D;
-      padding: 6px;
-      border: 1px solid #fff;
-      background-color: #fff;
-    }
-  }
-  
-  .footerLink {
-    color: #6FB3E3;
-    font-family: sans-serif;
-  }
-  
-  .button {
-    padding: 10px;
-    color: #fff;
-    background-color: #00369D;
-    outline: none;
-    border: 1px solid transparent;
-    border-radius: 32px;
-    position: relative;
-    z-index: 1;
-    cursor: pointer;
-    transition: 0.1s ease-in-out;
-  
-    &:hover {
-      background-color: transparent;
-      color: #00369D;
-  
-      + .border {
-        left: 0;
-        bottom: 0;
-      }
-    }
-  }
-  
-  .border {
-    display: inline-block;
-    padding: 8px 62px;
-    border: 1px dashed #fff;
-    border-radius: 31px;
-    height: 45px;
-    left: -5px;
-    z-index: 0;
-    position: absolute;
-    bottom: -6px;
-    transition: 0.3s ease-in-out;
-  }
-  
-  .swiper-button-next,
-  .swiper-button-prev {
-    color: #fff;
-    font-size: 20px;
-    background: #00369D;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  
-    &:hover {
-      background: black;
-      color: #fff;
-      transform: scale(1.1);
-      transition: all 0.3s ease;
-    }
-  }
-  
-  .swiper-button-next {
-    right: 10px;
-  }
-  
-  .swiper-button-prev {
-    left: 10px;
-  }
-  
-  .swiper-pagination {
-    text-align: center;
-  }
-  
-  
-  .accountWrapper {
-    position: relative;
-    transition: 0.2s ease-in-out;
-  }
-  
-  .accountHover {
-    display: inline-block;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
-  }
-  
-  .accountDropdown {
-    display: none; 
-    position: absolute;
-    border: 1px solid #00369D;
-    border-radius: 10px;
-    top: 100%;
-    left: 0;
-    background-color: white;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    transition: 0.2s ease-in-out;
-  
-    ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
+    li {
+      padding: 10px 20px;
+      cursor: pointer;
       transition: 0.2s ease-in-out;
-  
-      li {
-        padding: 10px 20px;
+
+      button {
+        width: 100%;
+        color: #00369D;
+        background-color: transparent;
+        border: none;
         cursor: pointer;
         transition: 0.2s ease-in-out;
-  
-        button {
-          width: 100%;
-          color: #00369D;
-          background-color: transparent;
-          border: none;
-          cursor: pointer;
-          transition: 0.2s ease-in-out;
-        }
       }
     }
   }
-  
-  .accountHover:hover .accountDropdown {
-    display: block;
-  }
-  .quantityBadge {
-    display: inline-block;
-    background-color: yellow; 
-    color: black; 
-    font-size: 12px; 
-    font-weight: bold;
-    padding: 5px; 
-    border-radius: 50%; 
-    position: absolute; 
-    top: -5px; 
-    right: 0px; 
-    width: 20px; 
-    height: 20px; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
-  }
-  
-  
+}
+
+.accountHover:hover .accountDropdown {
+  display: block;
+}
+
+.quantityBadge {
+  display: inline-block;
+  background-color: yellow;
+  color: black;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 5px;
+  border-radius: 50%;
+  position: absolute;
+  top: -5px;
+  right: 0px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
