--- a/src/assets/scss/Components/_shopProducts.scss
+++ b/src/assets/scss/Components/_shopProducts.scss
@@ -27,8 +27,9 @@
                 transition: 0.3s ease-in-out;
 
                 img {
-                    width: 100%;
+                    width: 200px;
                     height: 200px;
+                    object-fit: cover;
                     transition: 0.3s ease-in-out;
                     margin-bottom: 10px;
                     cursor: pointer;
