--- a/src/assets/scss/pages/_cardInfo.scss
+++ b/src/assets/scss/pages/_cardInfo.scss
@@ -153,3 +153,22 @@
         }
     }
 }
+@media (max-width: 385px) {
+    .productInfo {
+        margin-top: 0px;
+        .item {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            h1 {
+                font-size: 1.5rem !important;
+                width: 100%;
+            }
+            p {
+                width: 100%;
+            }
+        }
+    }
+}
