--- a/src/assets/scss/pages/_shop.scss
+++ b/src/assets/scss/pages/_shop.scss
@@ -10,6 +10,7 @@
                     font-size: 3rem;
                     color: #00369D;
                     margin-bottom: 10px;
+                    margin-top: 40px;
                 }
                 p {
                     font-family: sans-serif;
@@ -50,6 +51,18 @@
                 width: 100%;
                 font-size: 3rem !important;
             }
+        }
+    }
+}
+@media (max-width: 991px) {
+    form {
+        display: flex;
+        flex-direction: column;
+        label {
+            margin-bottom: 20px;
+        }
+        select {
+            margin-bottom: 20px !important;
         }
     }
 }
