--- a/src/assets/scss/Components/_shopProducts.scss
+++ b/src/assets/scss/Components/_shopProducts.scss
@@ -1,7 +1,8 @@
 .shop-products {
     display: flex;
-
+    width: 100%;
     .product-list {
+        width: 100%;
         display: flex;
         flex-wrap: wrap !important;
 
